@startuml

namespace Yacare.ObrasParticularesBundle.Entity  {
	class Matriculado <<class>> {
		+Persona
		+Profesion
		+FechaVencimiento
	}
	
	class ActaObra <<class>> {
		+Partida
		+EstadoAvance
		+Plazo
		+Profesional
		+TipoConstruccion
		+TipoObra
		+FechaDescargo
		+DescargoDetalle
	}
	
	class TipoFalta <<class>> {
		+Nombre
		+Compromiso
	}
	
	class TramitePlano <<class>> {
		+Solicitante
		+Profesional
		+Partida
		+Expediente
	}
	
	Matriculado ..|> Tapir.BaseBundle.Entity.ConId : implementa
	Matriculado -up-|> Yacare.BaseBundle.Entity.Persona : contiene
	
	TramitePlano ..|> Yacare.ObrasParticularesBundle.Entity.ConProfesional : implementa
	TramitePlano .left.|> Yacare.CatastroBundle.Entity.ConPartida : implementa
	TramitePlano -up-|> Yacare.BaseBundle.Entity.Persona : contiene
	
	ActaObra -up-|> Yacare.InspeccionBundle.Entity.Acta
	ActaObra "0..1" --o "0..n" TipoFalta 
}

@enduml
